breadcrumb spacing increased to prevent content going under title icon;

--- a/sites/all/themes/brodies201612/scss/style.scss
+++ b/sites/all/themes/brodies201612/scss/style.scss
@@ -370,9 +370,9 @@ blockquote{
             display:inline;
         }
     }
-    @media #{$normal}{
+/*    @media #{$normal}{
         min-height:2em;
-    }
+    }*/
     a{       
         font-weight: 700;
     }
